# RG34XX-games-music-player-players

./: README.md
linuxrootfs/etc/init.d/: keymon  volctl
linuxrootfs/etc/rc2.d/: S01keymon
linuxrootfs/usr/lib/: libSDL2_gfx-1.0.so.0.0.2  libSDL2_image-2.0.so.0.800.9  libSDL2_net-2.0.so.0.200.0  libgme.so.0.6.4  libtinyalsa.so.2.0.0
linuxrootfs/usr/lib/aarch64-linux-gnu/: libgme.so.0.6.4
sdcard/EXE/gme/: gme_player  launch.sh
sdcard/EXE/playgsf/: launch.sh  selector_playgsf
sdcard/Music/GBA/Final Fantasy I & II - Dawn of Souls [Final Fantasy I & II Advance] (2004)(Tose, Square Enix)/: 000 the prelude (title screen).minigsf  101 opening demo.minigsf  102 the prelude (final fantasy 1).minigsf  103 opening theme.minigsf  104 cornelia castle.minigsf  105 main theme.minigsf  106 chaos' temple.minigsf  107 matoya's cave.minigsf  108 town.minigsf  109 shop.minigsf  110 ship.minigsf  111 underwater temple.minigsf  112 dungeon.minigsf  113 menu screen.minigsf  114 airship.minigsf  115 gurgu volcano.minigsf  116 floating castle.minigsf  117 battle scene.minigsf  118 victory.minigsf  119 dead music.minigsf  120 save music.minigsf  121 church.minigsf  122 ruined castle.minigsf  123 lute.minigsf  124 bridge building.minigsf  125 deep place.minigsf  126 fanfare.minigsf  127 crystal revival.minigsf  129 inn.minigsf  (+34 more)
src/PlayGSF/: Makefile  selector_playgsf.cpp  test.cpp
src/PlayGSF/playergsf_alsa/: Makefile  config.status  configure  configure.in  linuxmain.cpp
src/gme/player/: Audio_Scope.cpp  Audio_Scope.h  CMakeLists.txt  Music_Player.cpp  player.cpp
src/volctl/: volctl.c
(+2 files in other folders)
